--- a/KGroupWorkSystem/KGroupWorkSystem.WPF.csproj
+++ b/KGroupWorkSystem/KGroupWorkSystem.WPF.csproj
@@ -58,10 +58,14 @@
     </ApplicationDefinition>
     <Compile Include="BackgroundWorkers\WorkOrderTimer.cs" />
     <Compile Include="ViewModels\ConductorViewModel.cs" />
+    <Compile Include="ViewModels\PalettePartsListViewModel.cs" />
     <Compile Include="ViewModels\WorkerViewModel.cs" />
     <Compile Include="ViewModels\WorkOrderViewModel.cs" />
     <Compile Include="Views\ConductorView.xaml.cs">
       <DependentUpon>ConductorView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PalettePartsListView.xaml.cs">
+      <DependentUpon>PalettePartsListView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WorkerView.xaml.cs">
       <DependentUpon>WorkerView.xaml</DependentUpon>
@@ -86,6 +90,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\PalettePartsListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\WorkerView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -119,6 +127,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes.MahApps">
+      <Version>0.1.6</Version>
+    </PackageReference>
     <PackageReference Include="Prism.Unity" Version="7.2.0.1422" />
     <PackageReference Include="ReactiveProperty">
       <Version>7.5.1</Version>
