--- a/KGroupWorkSystem.Domain/KGroupWorkSystem.Domain.csproj
+++ b/KGroupWorkSystem.Domain/KGroupWorkSystem.Domain.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\PaletteEntity.cs" />
     <Compile Include="Entities\WorkingEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IPalettePartsRepository.cs" />
     <Compile Include="Repositories\IWorkOrderRepository.cs" />
     <Compile Include="StaticValues\WorkingData.cs" />
   </ItemGroup>
