--- a/KGroupWorkSystem.Infrastructure/KGroupWorkSystem.Infrastructure.csproj
+++ b/KGroupWorkSystem.Infrastructure/KGroupWorkSystem.Infrastructure.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLServer\PalettePartsSQLServer.cs" />
     <Compile Include="SQLServer\SQLServerHelper.cs" />
     <Compile Include="SQLServer\WorkOrderSQLServer.cs" />
   </ItemGroup>
