--- a/KGroupWorkSystem.Domain/KGroupWorkSystem.Domain.csproj
+++ b/KGroupWorkSystem.Domain/KGroupWorkSystem.Domain.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\BomPartsEntity.cs" />
+    <Compile Include="Entities\PaletteDetailsEntity.cs" />
     <Compile Include="Entities\PaletteEntity.cs" />
     <Compile Include="Entities\WorkingEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
