--- a/KGroupWorkSystem/KGroupWorkSystem.WPF.csproj
+++ b/KGroupWorkSystem/KGroupWorkSystem.WPF.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -56,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BackgroundWorkers\TimeManagementTimer.cs" />
     <Compile Include="BackgroundWorkers\WorkOrderTimer.cs" />
     <Compile Include="ViewModels\ConductorViewModel.cs" />
     <Compile Include="ViewModels\PalettePartsDetailsViewModel.cs" />
@@ -153,5 +155,6 @@
       <Name>KGroupWorkSystem.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
