--- a/KGroupWorkSystem.Domain/KGroupWorkSystem.Domain.csproj
+++ b/KGroupWorkSystem.Domain/KGroupWorkSystem.Domain.csproj
@@ -44,11 +44,16 @@
     <Compile Include="Entities\BomPartsEntity.cs" />
     <Compile Include="Entities\PaletteDetailsEntity.cs" />
     <Compile Include="Entities\PaletteEntity.cs" />
+    <Compile Include="Entities\PerformanceEntity.cs" />
+    <Compile Include="Entities\WorkEntity.cs" />
     <Compile Include="Entities\WorkingEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IBomRepository.cs" />
     <Compile Include="Repositories\IPalettePartsRepository.cs" />
     <Compile Include="Repositories\IWorkOrderRepository.cs" />
+    <Compile Include="Repositories\ITimeManagementRepository.cs" />
+    <Compile Include="services\TimeManagementServices.cs" />
+    <Compile Include="services\WorkActivityService.cs" />
     <Compile Include="StaticValues\WorkingData.cs" />
   </ItemGroup>
   <ItemGroup>
